# brandbrain

./: .vercelignore  BrandBrain Demo.html  DEPLOY.md  Dockerfile  HANDOFF.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup-github.sh  vercel.json
contracts/events/: README.md  _envelope.schema.json  brain.update_published.v1.json  document.ingested.v1.json  mlr.check_failed.v1.json  synthesis.completed.v1.json
docs/: AI_OS_for_Pharma_Brand_Teams.docx  PRODUCT_ARCHITECTURE.md  TECHNICAL_DESIGN.md
docs/adr/: 0001-modular-monolith.md  0002-pgvector-then-qdrant.md  0003-redis-streams-eventbus.md
migrations/: env.py
scripts/: seed.py
src/brandbrain/: __init__.py  config.py  main.py  worker.py
src/brandbrain/domain/: __init__.py  common.py  events.py
src/brandbrain/platform/: __init__.py  auth.py  base.py  db.py  errors.py  eventbus.py  ids.py  llm.py  objectstore.py  telemetry.py  vectorstore.py
src/brandbrain/services/: __init__.py
src/brandbrain/services/audit/: __init__.py  api.py  events.py  interface.py  models.py  schemas.py  service.py
src/brandbrain/services/brand_brain/: __init__.py  api.py  events.py  interface.py  models.py  schemas.py  service.py
src/brandbrain/services/evidence_store/: __init__.py  api.py  events.py  interface.py  models.py  schemas.py  service.py
src/brandbrain/services/ingestion/: __init__.py  api.py  events.py  interface.py  models.py  schemas.py  service.py
src/brandbrain/services/mlr/: __init__.py  api.py  events.py  interface.py  models.py  schemas.py  service.py
src/brandbrain/services/notification/: __init__.py  api.py  events.py  interface.py  models.py  schemas.py  service.py
src/brandbrain/services/recommendation/: __init__.py  api.py  events.py  interface.py  models.py  schemas.py  service.py
src/brandbrain/services/retrieval/: __init__.py  api.py  events.py  interface.py  schemas.py  service.py
src/brandbrain/services/synthesizer/: __init__.py  api.py  events.py  interface.py  models.py  schemas.py  service.py
src/brandbrain/services/trust/: __init__.py  api.py  events.py  interface.py  schemas.py  service.py
tests/: README.md  conftest.py
tests/contract/: test_contracts.py  validate_all.py
tests/eval/: test_synthesis_quality.py
tests/unit/: test_audit_chain.py  test_domain_invariants.py  test_mlr_citation_guard.py  test_trust_engine.py
web/: README.md  index.html  vercel.json
