[project]
name = "brandbrain"
version = "0.1.0"
description = "The AI Operating System for Pharmaceutical Brand Teams — trust-first evidence intelligence platform."
requires-python = ">=3.12"
readme = "README.md"

# Pinned loosely here for the MVP; lock exact versions in the lockfile.
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.2.5",
    "redis>=5.0",
    "arq>=0.26",                # async task/worker queue on Redis
    "boto3>=1.34",              # S3-compatible object storage
    "authlib>=1.3",             # OIDC / OAuth2
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25",
    "tenacity>=8.3",            # retries with backoff
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "jsonschema>=4.22",
    "testcontainers>=4.5",
]
# The AI/LLM layer is provider-abstracted behind platform/llm.py. These are the
# concrete adapters; the core app never imports a vendor SDK directly.
llm = [
    "litellm>=1.40",           # provider gateway (OpenAI / Anthropic / Bedrock / Azure)
    "instructor>=1.3",         # structured (Pydantic) LLM outputs
    "rank-bm25>=0.2.2",        # lexical half of hybrid retrieval
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brandbrain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "unit: fast, no I/O",
    "integration: requires postgres/redis/minio (testcontainers)",
    "contract: validates API/event payloads against published schemas",
    "eval: AI quality / trust evals (may call an LLM; gated in CI)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S", "C4", "SIM"]
ignore = ["S101"]  # asserts allowed in tests

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
